added PixelSegment stuff; removed Vectorizer and PixelPath